@@ -1,3 +1,8 @@
+2011-09-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c:
+	  Minor cleanup from the stack-compact branch.
+
 2011-09-05 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/lib/sincoshf.c: fixed bug 3326853
